Update: API docs
